--- a/src/_sass/imports/common.scss
+++ b/src/_sass/imports/common.scss
@@ -258,6 +258,9 @@ $semantic-green: #2d9d78;
              0 2px 6px 2px rgba(60, 64, 67, 0.149);
   --ui-divider: .5px solid #3334;
   // --ui-elevated-shadow:0px 0px 10px rgba(0, 0, 0, 0.3);
+  // Used by the background of a slider
+  --ui-surface: #{$gray-700};
+  --ui-handle: #{$gray-900};
 
   --border-color: #{$gray-800}; // #e7e7e7;
 
@@ -445,6 +448,8 @@ $semantic-green: #2d9d78;
   --callout-shadow: 0 1px 1px rgba(25, 50, 50, 0.25);
   --callout-border-color: rgba(0, 102, 206, 0.25);
   --callout-border-color-hover: hsl(210, 80%, 40%);
+
+  --ui-surface: #{$gray-300};
 
   --highlight-color: hsla(49, 100%, 63%, 0.7);
 
