--- a/src/_sass/imports/minimal-mistakes/_sidebar.scss
+++ b/src/_sass/imports/minimal-mistakes/_sidebar.scss
@@ -67,6 +67,7 @@
       align-items: center;
       border-radius: 4px;
       padding: 10px 4px 10px 8px;
+      align-items: start;
 
       &:hover {
         background: var(--ui-background-hover);
