--- a/src/_sass/imports/astra.scss
+++ b/src/_sass/imports/astra.scss
@@ -68,9 +68,9 @@ $theme: "light" !default;
   }
 }
 
-.page__footer {
-  color: #fff !important; // override
-}
+// .page__footer {
+//   color: #fff !important; // override
+// }
 
 .page__footer-follow .social-icons .svg-inline--fa {
   color: inherit;
