--- a/src/_sass/imports/minimal-mistakes/_page.scss
+++ b/src/_sass/imports/minimal-mistakes/_page.scss
@@ -133,6 +133,26 @@
   //   font-size: $type-size-4;
   // }
   
+
+  .layout--changelog .page__content {
+    h2 {
+      color: var(--blue-500);
+      border-bottom-color: var(--blue-500);
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      
+      em {
+        display: block;
+        font-size: 0.6em;
+        font-style: normal;
+        color: var(--blue-300);
+        font-weight: 400;
+        float: right;
+      }
+    }
+  }
+
   .page__content {
       h2 {
           padding-bottom: 0.5em;
