--- a/src/components/LatexCommands/styles.module.css
+++ b/src/components/LatexCommands/styles.module.css
@@ -10,12 +10,17 @@
   align-items: center;
   padding: .5em;
   width: calc(50% - .5em);
-  font-size: .8em;
+  font-size: .8rem;
   border-radius: 8px;
   border: 1px solid var(--blue-100);
   background: var(--blue-25);
   color: var(--blue-900);
 }
+
+.latexCommands [data-latex] {
+  font-size: 1.1rem;
+}
+
 
 .latexCommands > :global(.language-latex) {
   font-weight: 900;
