--- a/src/css/tables.css
+++ b/src/css/tables.css
@@ -105,24 +105,27 @@ table tr:nth-child(2n) {
       color: #fff;
     }
 
-  .first-column-header table thead tr th:first-child {
-    background: var(--callout-background);
-    padding-left: 0.5em;
-  }
-  
-  .first-column-header table thead tr th:nth-child(2) {
-    padding-left: 0.5em;
-  }
-  
-  .first-column-header table tr td:first-child {
-    background: var(--callout-background);
-    padding-left: 0.5em;
-  }
-  
-  .first-column-header table tr td:nth-child(2) {
-    padding-left: 0.5em;
-  }
-  
+.first-column-header table thead tr th:first-child {
+  background: var(--callout-background);
+  padding-left: 0.5em;
+}
+
+.first-column-header table thead tr th:nth-child(2) {
+  padding-left: 0.5em;
+}
+
+.first-column-header table tr td:first-child {
+  background: var(--callout-background);
+  padding-left: 0.5em;
+}
+
+.first-column-header table tr td:nth-child(2) {
+  padding-left: 0.5em;
+}
+
+.no-header table thead {
+  display: none;
+}
   
 .equal-width-columns table {
   table-layout: fixed;
