--- a/src/components/HeroImage/styles.module.css
+++ b/src/components/HeroImage/styles.module.css
@@ -44,4 +44,16 @@
   padding-left: 1em;
   border-radius: 8px;
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0 0 0 / .6) 100%) repeat scroll 0 0;
-}  
+}
+
+@media screen and (max-width: 1024px) {
+  .heroText {
+    top: 0;
+    bottom: auto;
+    padding: 0;
+  }
+
+  .heroContainer {
+    height: 80vh;
+  }
+}
