--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -108,9 +108,10 @@ header p.subtitle {
 transition: all 0.3s ease-in-out;
 }
 
+/* When on a narrow screen... */
 @media screen and (max-width: 1024px) {
   .h1 {
-    font-size: max(2rem, 22vw);
+    font-size: max(2rem, 16vw);
   }
 
   header p.subtitle {
@@ -122,7 +123,7 @@ transition: all 0.3s ease-in-out;
   }
 
   .title {
-    font-size: 2rem;
+    font-size: 1.5rem;
   }  
   
   .section {
@@ -133,4 +134,19 @@ transition: all 0.3s ease-in-out;
   .section a {
     width: 100%;
   }
+}
+
+/** Very narrow... */
+@media screen and (max-width: 512px) {
+
+  .section {
+    gap: 1rem;
+    margin: 1rem;
+  }
+
+  .container {
+    padding: 1em;
+  }
+
+
 }
