--- a/src/components/HeroImage/styles.module.css
+++ b/src/components/HeroImage/styles.module.css
@@ -1,7 +1,8 @@
 .heroContainer {
+  /* display: flex; */
   position: relative;
   width: 100%;
-  height: var(--container-height, 40vh);
+  min-height: var(--container-height, 40vh);
   border: 1px solid var(--neutral-700);
   border-radius: 8px;
   --text-color: #fff;
@@ -24,7 +25,9 @@
 
 
 .heroImage {
-  height: 100%;
+  position: absolute;
+  z-index: 0;
+  inset: 0;
   background-image: var(--hero-image);
   background-size: cover;
   background-position: center;
@@ -34,15 +37,18 @@
 }
 
 .heroText {
-  width: 100%;
-  color: var(--text-color);
-  text-shadow: 0 0 8px #3335;
   position: absolute;
-  top: 20%;
-  bottom: 0;
+  z-index: 1;
+  height: 100%;
+  width: 100%;
   left: 0;
+  bottom: 0;
+  margin-top: 10vh;
   padding-bottom: 1em;
   padding-left: 1em;
+
+  color: var(--text-color);
+  text-shadow: 0 0 8px #3335;
   border-radius: 8px;
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0 0 0 / .6) 100%) repeat scroll 0 0;
 }
@@ -62,7 +68,7 @@
 }
 
 
-@media screen and (max-width: 1024px) {
+/* @media screen and (max-width: 1024px) {
   .heroText {
     top: 2em;
     bottom: 0;
@@ -70,6 +76,6 @@
   }
 
   .heroContainer {
-    height: 80vh;
+    height: min(80vh, 100%);
   }
-}
+} */
