--- a/src/components/HeroImage/styles.module.css
+++ b/src/components/HeroImage/styles.module.css
@@ -53,6 +53,13 @@
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0 0 0 / .6) 100%) repeat scroll 0 0;
 }
 
+@media only screen and (max-width: 767px) {
+  .heroText {
+    padding: 0;
+  }
+
+}
+
 .heroText > div {
   display: flex;
   flex-direction: row; /* Default, but can be explicit */
