--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -3,6 +3,10 @@
  * and scoped locally.
  */
 
+body {
+  background-color: var(--neutral-900);
+}
+
  .header {
   padding: 4rem 0;
   text-align: center;
@@ -15,7 +19,30 @@
   font-size: clamp(1rem, 20vw, 10rem);
   font-weight: 900;
   letter-spacing: -0.04em;
-  color: var(--neutral-100);
+  /* color: var(--neutral-100); */
+  color: transparent;
+
+
+  background: radial-gradient(circle, var(--secondary-color) 0%, var(--primary-color) 100%);
+  background-clip: text;
+  animation: glow 14s linear infinite;
+  background-size: 500% 200%;
+}
+
+.h1 .js {
+  font-weight: 100;
+}
+
+@keyframes glow {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 100% 100%;
+  }
+  100% {
+    background-position: 0 0;
+  }
 }
 
 .subtitle {
@@ -53,34 +80,64 @@
   text-decoration: none;
 }
 
-
-
 .pod {
   position: relative;
   padding: 8px;
   min-width: 250px;
-  /* padding-bottom: 48px; */
-  border-radius: 16px;
   min-height: 200px;
   color: var(--text-color);
   transform: scale(1);
   transition: all 0.3s ease-in-out;
   background: var(--neutral-900);
   height: 100%;
+  cursor: pointer;
+  z-index: 1;
+  border-radius: 16px;
 
-  border: 1px solid rgb(205 205 205 / 20%);
-  border-top-color: rgb(255 255 255 / 40%);
-  outline: 2px outset rgb(255 255 255 / 25%);
-  box-shadow: 0 -2px 10px rgb(255 255 255 / 20%),
-    var(--box-shadow-sm); 
-    /* 0 0 7px 2px rgb(0 0 0 / .1),
-    0 0 15px 10px rgb(0 0 0 / .2),
-    0 0 20px rgb(0 0 0  / .3)
-    ;
-*/
-
-  /* backdrop-filter: blur(18px) saturate(180%) contrast(80%) brightness(80%); */
+  /* Transparent border to ensure spacing for the glow */
+  border: 3px solid transparent;
+  background-clip: padding-box;
 }
+
+.pod::before {
+  content: "";
+  position: absolute;
+  top: -6px;
+  left: -6px;
+  right: -6px;
+  bottom: -6px;
+  border-radius: 22px;
+  background: linear-gradient(45deg, 
+    red,  blue, green, red
+  );
+  z-index: -1;
+  filter: blur(16px);
+  opacity: 0.8;
+  /* animation: glow2 6s linear infinite; */
+
+  /* Hide the center to only show the outer glow */
+  -webkit-mask-image: radial-gradient(circle, rgba(0,0,0,0) 60%, rgba(0,0,0,1) 100%);
+  mask-image: radial-gradient(circle, rgba(0,0,0,0) 60%, rgba(0,0,0,1) 100%);
+}
+
+.mathfieldPod::before {
+  background: linear-gradient(32deg, 
+  yellow, orange, pink, red, yellow
+  );
+}
+
+.computeEnginePod::before {
+  background: linear-gradient(12deg, 
+  blue, green,teal, chartreuse, blue
+  );
+}
+.mathJsonPod::before {
+  background: linear-gradient(17deg, 
+  purple, pink,red, magenta, violet
+  );
+}
+
+
 
 .pods a:hover .pod {
   transform: scale(1.05);
