--- a/src/components/HeroImage/styles.module.css
+++ b/src/components/HeroImage/styles.module.css
@@ -2,7 +2,7 @@
   /* display: flex; */
   position: relative;
   width: 100%;
-  min-height: var(--container-height, 40vh);
+  min-height: var(--container-height, 50vh);
   border: 1px solid var(--neutral-700);
   border-radius: 8px;
   --text-color: #fff;
@@ -20,7 +20,7 @@
 .heroContainer h1, 
 .heroContainer h2 {
   --_outline-color:var(--outline-color, #0003);
-  text-shadow: 0 0 8px #3335, 2px 0 2px var(--_outline-color), -2px 0 2px var(--_outline-color), 0 2px 2px var(--_outline-color), 0 -2px 2px var(--_outline-color);
+  text-shadow: 0 0 8px #3332, 2px 0 8px var(--_outline-color), -2px 0 8px var(--_outline-color), 0 2px 2px var(--_outline-color), 0 -2px 8px var(--_outline-color);
 }
 
 
@@ -32,25 +32,25 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  border-radius: 8px;
+  border-radius: 6px;
   /* filter: brightness(0.9) grayscale(0.2); */
 }
 
 .heroText {
-  position: absolute;
+  /* position: absolute; */
   z-index: 1;
   height: 100%;
   width: 100%;
-  left: 0;
-  bottom: 0;
-  margin-top: 10vh;
-  padding-bottom: 1em;
-  padding-left: 1em;
+  /* left: 0; */
+  /* bottom: 0; */
+  /* margin-top: 10vh; */
+  /* padding-bottom: 1em; */
+  /* padding-left: 1em; */
 
   color: var(--text-color);
-  text-shadow: 0 0 8px #3335;
+  /* text-shadow: 0 0 8px #3335; */
   border-radius: 8px;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0 0 0 / .6) 100%) repeat scroll 0 0;
+  /* background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0 0 0 / .6) 100%) repeat scroll 0 0; */
 }
 
 @media only screen and (max-width: 767px) {
