--- a/src/components/Latex/styles.module.css
+++ b/src/components/Latex/styles.module.css
@@ -42,13 +42,16 @@
 
 
 .source {
-  font-family: var(--monospace-font-family);
-  color: var(--blue-900);
-  font-size: 1.1em;
-  line-height: 1.4;
+  display: flex;
+  align-items: center;
   overflow: visible;
   word-wrap: break-word;
   white-space: pre-wrap;
+
+  font-family: var(--monospace-font-family);
+  color: var(--blue-900);
+  font-size: .8rem;
+  line-height: 1.4;
 }
 
 [data-theme="dark"] .source {
@@ -56,7 +59,8 @@
 }
 
 .source .command {
-  color: var(--cyan-700);
+  color: var(--cyan-800);
+  font-weight: 600;
 }
 
 [data-theme="dark"] .source .command {
